fix to collapse, to actually close and remove aria-expanded on other buttons when "toggle" is on

--- a/src/assets/scss/_collapse.scss
+++ b/src/assets/scss/_collapse.scss
@@ -7,6 +7,10 @@ $collapse-body-pad: 0 0 !default;
 $collapse-duration: 500ms;
 
 .collapse__item {
+
+	[aria-expanded="true"] {
+		color: #000;
+	}
 	.collapse__header {
 		padding: $collapse-header-pad;
 	}
